# HOTPIN

./: .gitignore  AUDIO_FIX_EXECUTIVE_SUMMARY.md  AUDIO_PLAYBACK_BUG_FIX.md  AUDIO_PLAYBACK_INCOMPLETE_FIX.md  AUDIO_PLAYBACK_TIMEOUT_FIX.md  BUGFIX_EMPTY_LLM_RESPONSE.md  BUILD_AND_TEST_INSTRUCTIONS.md  CRITICAL_FIX_TTS_PLAYBACK.md  CRITICAL_ISSUES_FOUND.md  DEPLOYMENT_GUIDE_AUDIO_FIX.md  EOS_TRANSCRIPTION_GAP_FIX.md  ESP32-CAM AI Agent Codebase Prompt.txt  ESP32_FIRMWARE_CHANGES_IMPLEMENTED.md  ESP32_WEBSOCKET_FIXES_REQUIRED.md  EXECUTIVE_SUMMARY.md  FIXES_IMPLEMENTED.md  GIT_COMMIT_GUIDE.md  HOTPIN_QUICK_FIX_GUIDE.md  HOTPIN_SYSTEM_ANALYSIS.md  HOTPIN_SYSTEM_ANALYSIS_SUMMARY.md  HOTPIN_WEBSOCKET_SPECIFICATION.md  IMPLEMENTATION_SUMMARY.md  LLAMA4_SCOUT_VISION_IMPLEMENTATION.md  LOG_ANALYSIS_CRITICAL_ISSUES.md  NETWORK_STABILITY_FIXES.md  Prompt Generation for Hotpin Prototype.txt  QUICK_FIX_REFERENCE.md  QUICK_START_FIX_DEPLOYMENT.md  QUICK_TEST_GUIDE_FEEDBACK.md  README.md  SOLUTION_SUMMARY.md  TECHNICAL_IMPLEMENTATION_FEEDBACK.md  TESTING_GUIDE.md  TTS_BUFFER_OVERFLOW_DIAGNOSTIC.md  USER_FEEDBACK_IMPROVEMENTS.md  VALIDATION_CHECKLIST.md  VISION_IMPLEMENTATION_SUMMARY.md  VISION_TESTING_GUIDE.md  VISUAL_ARCHITECTURE_FEEDBACK.md  WARP.md  (+10 more)
core/: __init__.py  llm_client.py  stt_worker.py  tts_worker.py
hotpin_esp32_firmware/: .env.example  ARCHITECTURAL_DECISION_CORE_AFFINITY.md  Build_Logs.txt  CMakeLists.txt  COMPONENT_IMPLEMENTATION_STATUS.md  COMPREHENSIVE_FIX_PATCH_SUMMARY.md  CONFIGURATION_ARCHITECTURE.md  CONFIGURATION_GUIDE.md  CONFIGURATION_IMPLEMENTATION.md  CORE_AFFINITY_FIX.md  CORE_AFFINITY_QUICK_REF.md  CRITICAL_CRASH_ANALYSIS.md  CRITICAL_DMA_DESCRIPTOR_FIX.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_GPIO12_STRAPPING_PIN_FIX.md  CRITICAL_I2S_ARCHITECTURE_FIX.md  DMA_BUFFER_FIX.md  EXECUTIVE_SUMMARY_RING_BUFFER_FIX.md  FINAL_DMA_OPTIMIZATION.md  FLASHING_INSTRUCTIONS.md  GIT_STYLE_PATCH.md  GPIO12_TO_GPIO2_QUICK_PATCH.md  I2S_CAMERA_CONFLICT_RESOLUTION_COMPLETE.md  I2S_CAMERA_INTERRUPT_FIXES.md  I2S_FULL_DUPLEX_FIX_COMPLETE.md  I2S_LEGACY_TO_STD_MIGRATION.md  I2S_MCLK_INTERRUPT_FIX_PATCH.md  I2S_MIGRATION_QUICK_REF.md  I2S_RACE_CONDITION_MUTEX_FIX.md  I2S_START_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MEMORY_MANAGEMENT_GUIDE.md  MIGRATION_GUIDE.md  QUICK_CONFIG_REFERENCE.md  QUICK_CONFIG_SCRIPTS.md  QUICK_DEPLOYMENT_RUNBOOK.md  QUICK_FIX_REFERENCE.md  README.md  RING_BUFFER_DMA_FIX.md  (+14 more)
hotpin_esp32_firmware/main/: CMakeLists.txt  Kconfig.projbuild  audio_driver.c  audio_driver.c.backup  audio_feedback.c  button_handler.c  camera_controller.c  event_dispatcher.c  feedback_player.c  http_client.c  idf_component.yml  json_protocol.c  led_controller.c  main.c  memory_manager.c  serial_commands.c  state_manager.c  stt_pipeline.c  tts_decoder.c  websocket_client.c  websocket_client_stub.c
hotpin_esp32_firmware/main/include/: audio_driver.h  audio_feedback.h  button_handler.h  camera_controller.h  config.h  event_dispatcher.h  feedback_player.h  http_client.h  json_protocol.h  led_controller.h  memory_manager.h  safe_memory.h  serial_commands.h  state_manager.h  stt_pipeline.h  system_events.h  tts_decoder.h  websocket_client.h
hotpin_esp32_firmware/scripts/: README_UPDATE_SERVER_IP.md  apply_env_config.py  update_server_ip.py
